Explore now working but hardcoded current location

--- a/ionic/www/templates/explore.html
+++ b/ionic/www/templates/explore.html
@@ -1,5 +1,6 @@
 <ion-view>
   <ion-content>
-    <h2> explore page</h2>
+    <h2>Explore</h2>
+    <div id="pin_list"></div>
   </ion-content>
 </ion-view>
