--- a/ionic/www/templates/main.html
+++ b/ionic/www/templates/main.html
@@ -2,9 +2,10 @@
   <ion-content scroll="false">
     <map on-create="mapCreated(map)"></map>
   </ion-content>
-    <ion-footer-bar class="bar-stable">
-      <a href="#/droppin" class="button button-icon icon ion-location"> Drop Pin</a>
-      <a href="#/explore"class="button button-icon icon ion-social-buffer"> Explore</a>
-      <a ng-click="logout()" class="button button-icon icon ion-log-out"> Logout</a>
-    </ion-footer-bar>
+
+  <ion-footer-bar class="bar-stable">
+    <a href="#/droppin" class="button button-icon icon ion-location"> Drop Pin</a>
+    <a ng-click="renderPins()" href="#/explore"class="button button-icon icon ion-social-buffer"> Explore</a>
+    <a ng-click="logout()" class="button button-icon icon ion-log-out"> Logout</a>
+  </ion-footer-bar>
 </ion-view>
