--- a/ionic/www/templates/explore.html
+++ b/ionic/www/templates/explore.html
@@ -1,6 +1,6 @@
 <ion-view>
   <ion-content>
     <h2>Explore</h2>
-    <div id="pin_list"></div>
+    <div id="pin_list_old"></div>
   </ion-content>
 </ion-view>
