--- a/ionic/www/css/style.css
+++ b/ionic/www/css/style.css
@@ -1,7 +1,5 @@
-/* Empty. Add your own CSS if you like */
-
-map {
-  display: block;
+#map {
+  /*display: block;*/
   width: 100%;
   height: 100%;
 }
