More streamlined in ionic, with modal, but haven't figured out how to run multiple modals so drop and register are disabled...i think for explore we may want another tab, or do all as modals so map never has to refresh?

--- a/ionic/www/templates/explore.html
+++ b/ionic/www/templates/explore.html
@@ -1,6 +1,6 @@
 <ion-view>
   <ion-content>
     <h2>Explore</h2>
-    <div id="pin_list_old"></div>
+    <div id="pin_list_all"></div>
   </ion-content>
 </ion-view>
