--- a/ionic/www/css/style.css
+++ b/ionic/www/css/style.css
@@ -2,6 +2,18 @@
   /*display: block;*/
   width: 100%;
   height: 100%;
+  background:url('../images/map-loading.gif') no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;  
+}
+.gm-style{
+  background:url('../images/map-loading.gif') no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
 }
 .scroll {
   height: 100%;
