--- a/ionic/www/css/style.css
+++ b/ionic/www/css/style.css
@@ -2,10 +2,10 @@
   /*display: block;*/
   width: 100%;
   height: 100%;
-  background: #66ceff url('../images/map-loading.gif') no-repeat center;
+  /*background: #66ceff url('../images/map-loading.gif') no-repeat center;*/
 }
 .gm-style{
-  background: #66ceff url('../images/map-loading.gif')no-repeat center;
+  /*background: #66ceff url('../images/map-loading.gif')no-repeat center;*/
 }
 .scroll {
   height: 100%;
@@ -23,7 +23,6 @@ textarea {
   text-transform:uppercase;
   color:limegreen; /* Default is private */
 }
-
 
 #pin_list{
   color:#4a87ee;
