enabled auto update locations, setup notifications based on locations, set notification freq to 3 min

--- a/ionic/platforms/android/res/xml/config.xml
+++ b/ionic/platforms/android/res/xml/config.xml
@@ -33,9 +33,9 @@
     <splash density="port-xhdpi" src="resources/android/splash/drawable-port-xhdpi-screen.png" />
     <splash density="port-xxhdpi" src="resources/android/splash/drawable-port-xxhdpi-screen.png" />
     <splash density="port-xxxhdpi" src="resources/android/splash/drawable-port-xxxhdpi-screen.png" />
-    <name>maps-clean</name>
+    <name>Word On The Street</name>
     <description>
-        An Ionic Framework and Cordova project.
+        A Geolocation Messaging App
     </description>
     <author email="hi@ionicframework" href="http://ionicframework.com/">
       Ionic Framework Team
