lowercased most inputs except passwords and first and last names

--- a/ionic/www/css/style.css
+++ b/ionic/www/css/style.css
@@ -24,6 +24,8 @@ textarea {
   color:lightgrey; /* Default is private */
 }
 
+.lowercase{text-transform:lowercase;}
+
 #pin_list{
   color:#4a87ee;
   margin:auto 0; 
