--- a/ionic/platforms/android/res/xml/config.xml
+++ b/ionic/platforms/android/res/xml/config.xml
@@ -51,4 +51,5 @@
     <preference name="BackupWebStorage" value="none" />
     <preference name="SplashScreen" value="screen" />
     <preference name="SplashScreenDelay" value="3000" />
+    <preference name="orientation" value="portrait" />
 </widget>
